--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -8,7 +8,7 @@
 	<string>&lt;center&gt;This agent finds movie posters from &lt;a href=&quot;http://www.alternativemovieposters.com/&quot;&gt;www.alternativemovieposters.com&lt;/a&gt;&lt;/center&gt; &lt;br /&gt;
 		Like a poster that you see?
 		&lt;br /&gt;
-		Then make sure to go to the main website to find out who made it!</string>
+		Make sure to go to the main website to find out who made it!</string>
 	<key>PlexFrameworkVersion</key>
 	<string>2</string>
 	<key>PlexPluginClass</key>
